--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,18 @@
     <string name="part9_1">Natural or rudimentary (pole and dagga, makeshift,wood, cardboard, or metal?</string>
     <string name="part9_0">Finished wall (brick /stone with cement/lime?</string>
     <string name="part11_label">11.Does the household possess any of the following assets:Radio,television,refrigerator,bicycle,motorcycle,car or truck?</string>
+    <string name="title_activity_login">Voucher</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
